# pymol-open-source

./: .clang-format  .gitignore  AUTHORS  CHANGES  CHECKLIST  CMakeLists.txt  COMMANDS  ChangeLog  DEVELOPERS  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.delsci  Makefile.in  NOTES  PACKAGING  README  README.md  README.rh7x-usr-local  Rules.alpha  Rules.irix  Rules.linux  Rules.linux-freemol  Rules.linux-rh7x  Rules.linux-rpm-rh70-py152  Rules.linux-rpm-rh72-py21n  Rules.make  Rules.osx-hybrid  Rules.osx-native  TODO  aclocal.m4  acsite.m4  autogen.sh  config.h.in  configure  configure.ac  create_shadertext.py  meson.build  meson_options.txt  (+11 more)
contrib/champ/: LICENSE  Makefile  Makefile.am  Makefile.delsci  champ.c  champ.h  champ_module.c  chiral.h  const.h  err2.c  feedback.h  feedback2.h  list.h  mac.h  meson.build  os_memory.c  os_memory.h  os_python.h  os_std.h  strblock.c  strblock.h  vla.c
contrib/champ/test/: 01basic.py  10stereo.py  22export_partial_charges.py
layer0/: Base.h  Bezier.cpp  Bezier.h  Block.c  Block.cpp  Block.h  CarveHelper.cpp  CarveHelper.h  ContourSurf.cpp  ContourSurf.h  Crystal.c  Crystal.cpp  Crystal.h  Debug.c  Debug.h  Deferred.c  Deferred.cpp  Deferred.h  Err.c  Err.cpp  Err.h  Event.h  Feedback.c  Feedback.cpp  Feedback.h  Field.c  Field.cpp  Field.h  File.c  File.cpp  File.h  FileStream.h  GFXManager.cpp  GFXManager.h  GenericBuffer.cpp  GenericBuffer.h  Grap.c  Grap.h  GraphicsUtil.cpp  GraphicsUtil.h  (+116 more)
layer1/: Basis.c  Basis.cpp  Basis.h  ButMode.c  ButMode.cpp  ButMode.h  CGO.c  CGO.cpp  CGO.h  CGOGL.cpp  CGOGL.h  CGORenderer.cpp  CGORenderer.h  COLLADA.cpp  Camera.cpp  Camera.h  Character.c  Character.cpp  Character.h  Color.c  Color.cpp  Color.h  Control.c  Control.cpp  Control.h  Extrude.c  Extrude.cpp  Extrude.h  Font.c  Font.cpp  Font.h  FontGLUT.c  FontGLUT.cpp  FontGLUT.h  FontGLUT9x15.c  FontGLUTHel12.c  FontTTF2.h  FontType.c  FontType.cpp  FontType.h  (+86 more)
layer2/: AssemblyHelpers.cpp  AssemblyHelpers.h  AtomInfo.c  AtomInfo.cpp  AtomInfo.h  AtomInfoHistory.cpp  AtomInfoHistory.h  AtomNeighbors.h  BondTypeHistory.cpp  BondTypeHistory.h  CifBondDict.h  CifFile.cpp  CifFile.h  CifMoleculeReader.cpp  CoordSet.c  CoordSet.cpp  CoordSet.h  DistSet.c  DistSet.cpp  DistSet.h  GadgetSet.c  GadgetSet.cpp  GadgetSet.h  HydrogenAdder.cpp  HydrogenAdder.h  Makefile  Makefile.am  Makefile.in  MmodTyping.cpp  MmodTyping.h  MmtfMoleculeReader.cpp  Mol2Typing.cpp  Mol2Typing.h  MolV3000.cpp  MolV3000.h  ObjectAlignment.c  ObjectAlignment.cpp  ObjectAlignment.h  ObjectCGO.c  ObjectCGO.cpp  (+104 more)
layer3/: AtomIterators.cpp  AtomIterators.h  CifDataValueFormatter.cpp  CifDataValueFormatter.h  Editor.c  Editor.cpp  Editor.h  Executive.c  Executive.cpp  Executive.h  ExecutiveDef.h  ExecutiveLoad.h  ExecutivePython.cpp  ExecutivePython.h  Executive_pre.h  Interactions.cpp  Interactions.h  MaeExportHelpers.cpp  MaeExportHelpers.h  Makefile.am  Makefile.in  MoleculeExporter.cpp  MoleculeExporter.h  MovieScene.cpp  MovieScene.h  PlugIOManager.c  PlugIOManager.cpp  PlugIOManager.h  RingFinder.cpp  RingFinder.h  Seeker.c  Seeker.cpp  Seeker.h  Selector.c  Selector.cpp  Selector.h  SelectorDef.h  SelectorTmp.cpp  SpecRec.cpp  SpecRec.h  (+3 more)
layerCTest/: Test.cpp  Test.h  TestCmdTest2.h  Test_Algorithm.cpp  Test_Bezier.cpp  Test_CCrystal.cpp  Test_CifFile.cpp  Test_Classic_VLA.cpp  Test_Event.cpp  Test_Executive.cpp  Test_Functional_Utility.cpp  Test_Image.cpp  Test_List.cpp  Test_Picking.cpp  Test_Result.cpp  Test_ScrollBar.cpp  Test_ShaderPreProcessor.cpp  Test_ShaderPreprocessor.cpp  Test_SymOp.cpp  Test_TTT.cpp  Test_Test.cpp  Test_Util.cpp  Test_VLA.cpp  Test_cache_ptr.cpp  Test_copyable_ptr.cpp  Test_type_traits.cpp  Test_zstring_view.cpp  meson.build
modules/chempy/: __init__.py  arc.py  bond_amber.py  bond_mmff.py  bonds.py  brick.py  cc1.py  cex.py  charge.py  cif.py  cpv.py  dictdb.py  gamess1.py  gms.py  hetatm.py  io.py  lst.py  mae.py  map.py  mass.py  meson.build  mmd.py  models.py  mol.py  mol2.py  neighbor.py  pdb.py  pkl.py  place.py  protein.py  protein_amber.py  protein_amber99.py  protein_mmff.py  protein_residues.py  sdf.py  solvate.py  water_amber.py  water_residues.py  xyz.py
modules/chempy/bmin/: __init__.py  commands.py  (+4 more)
modules/pmg_qt/: TextEditor.py  __init__.py  advanced_settings_gui.py  builder.py  file_dialogs.py  keymapping.py  meson.build  mimic_pmg_tk.py  mimic_tk.py  properties_dialog.py  pymol_gl_widget.py  pymol_qt_gui.py  scene_bin_gui.py  shortcut_menu_gui.py  volume.py
modules/pymol/: __init__.py  __main__.py  _gui.py  api.py  callback.py  cgo.py  cgobuilder.py  checking.py  cmd.py  colorprinting.py  colorramping.py  commanding.py  completing.py  computing.py  constants.py  constants_palette.py  contrib.py  controlling.py  creating.py  diagnosing.py  editing.py  editor.py  experimenting.py  exporting.py  externing.py  feedingback.py  fitting.py  gui.py  headering.py  helping.py  importing.py  internal.py  invocation.py  keyboard.py  keywords.py  lazyio.py  locking.py  m4x.py  menu.py  meson.build  (+27 more)
ov/src/: Makefile  Makefile.am  Makefile.delsci  Makefile.in  OVContext.c  OVContext.h  OVHeap.c  OVHeap.h  OVHeapArray.c  OVHeapArray.cpp  OVHeapArray.h  OVLexicon.c  OVLexicon.cpp  OVLexicon.h  OVOneToAny.c  OVOneToAny.cpp  OVOneToAny.h  OVOneToOne.c  OVOneToOne.cpp  OVOneToOne.h  OVRandom.c  OVRandom.cpp  OVRandom.h  OVreturns.h  meson.build  ov_defines.h  ov_port.h  ov_status.h  ov_types.h  ov_utility.cpp  ov_utility.h
trunk/pymol/: .svnignore  AUTHORS  CHANGES  CHECKLIST  COMMANDS  ChangeLog  DEVELOPERS  INSTALL  INSTALL.linux-rh7x  LICENSE  Makefile  Makefile.am  Makefile.delsci  NOTES  PACKAGING  README  README.linux-rh7x  Rules.alpha  Rules.irix  Rules.linux  Rules.linux-freemol  Rules.linux-rh7x  Rules.linux-rpm-rh70-py152  Rules.linux-rpm-rh72-py21n  Rules.make  Rules.osx-hybrid  Rules.osx-native  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  create_shadertext.py  monkeypatch_distutils.py  pymol.com  pymol.com.linux-rpm-rh70-py152  pymol.com.linux-rpm-rh72-py21n  pymol.com.template  pymol.csh  (+4 more)
(+2311 files in other folders)
