[project]
name = "pymol"
readme = "README.md"
requires-python = ">=3.9"
dynamic=["version"]
license = {file = "LICENSE"}
description = """
PyMOL is a Python-enhanced molecular graphics tool.
It excels at 3D visualization of proteins, small molecules, density,
surfaces, and trajectories. It also includes molecular editing,
ray tracing, and movies. Open Source PyMOL is free to everyone!
"""
authors = [
  {name = "Schrodinger", email = "pymol-users@lists.sourceforge.net"},
]
dependencies = [
  "numpy>=1.26.4",
]

[project.optional-dependencies]
test = [
  "pillow==10.3.0",
  "pytest==8.2.2",
]

[project.urls]
Homepage = "https://pymol.org"
Documentation = "https://pymol.org/dokuwiki"
Repository = "https://github.com/schrodinger/pymol-open-source"
"Bug Tracker" = "https://github.com/schrodinger/pymol-open-source/issues"
Changelog = "https://github.com/schrodinger/pymol-open-source/blob/master/ChangeLog"

[build-system]
requires = [
  "meson-python>=0.15.0",
  "numpy>=1.26.4"
]
build-backend = "mesonpy"

[project.scripts]
pymol = "pymol:launch"

