
INCLUDES = -I../ov/src -I../layer1 -I../layer2 -I../layer3 \
   -I../layer4 -I../layer5 -I../contrib/uiuc/plugins/include

noinst_LTLIBRARIES = liblayer0.la

liblayer0_la_SOURCES = Base.h  \
Block.c  \
Block.h  \
Crystal.c  \
Crystal.h  \
Debug.c  \
Debug.h  \
Deferred.c  \
Deferred.h  \
Err.c  \
Err.h  \
Feedback.c  \
Feedback.h  \
Field.c  \
Field.h  \
Isosurf.c  \
Isosurf.h  \
ListMacros.h  \
Map.c  \
Map.h  \
Match.c  \
Match.h  \
Matrix.c  \
Matrix.h  \
MemoryCache.c  \
MemoryCache.h  \
MemoryDebug.c  \
MemoryDebug.h  \
MyPNG.c  \
MyPNG.h  \
OOMac.h  \
os_gl.c  \
os_gl.h  \
os_limits.h  \
os_predef.h  \
os_proprietary.h  \
os_python.h  \
os_std.h  \
os_time.h  \
os_types.h  \
os_unix.h  \
Parse.c  \
Parse.h  \
Pixmap.c  \
Pixmap.h  \
PyMOLGlobals.h  \
PyMOLOptions.h  \
Queue.c  \
Queue.h  \
Raw.c  \
Raw.h  \
Shader.c \
Shader.h \
Sphere.c  \
SphereData.h  \
Sphere.h  \
Tetsurf.c  \
Tetsurf.h  \
Texture.c  \
Texture.h  \
Tracker.c  \
Tracker.h  \
Triangle.c  \
Triangle.h  \
Util.c  \
Util.h  \
Vector.c  \
Vector.h  \
Version.h  \
Word.c  \
Word.h  

