
INCLUDES = -I../ov/src -I../layer0 -I../layer2 -I../layer3 \
   -I../layer4 -I../layer5 -I../contrib/uiuc/plugins/include

noinst_LTLIBRARIES = liblayer1.la

liblayer1_la_SOURCES = Basis.c \
Basis.h \
ButMode.c \
ButMode.h \
CGO.c \
CGO.h \
Character.c \
Character.h \
Color.c \
Color.h \
Control.c \
Control.h \
Extrude.c \
Extrude.h \
Font.c \
FontGLUT8x13.c \
FontGLUT9x15.c \
FontGLUT.c \
FontGLUT.h \
FontGLUTHel10.c \
FontGLUTHel12.c \
FontGLUTHel18.c \
Font.h \
FontTTF2.h \
FontTTF.h \
FontType.c \
FontType.h \
Movie.c \
Movie.h \
Ortho.c \
Ortho.h \
P.c \
PConv.c \
PConv.h \
P.h \
Pop.c \
Pop.h \
PyMOLObject.c \
PyMOLObject.h \
Ray.c \
Ray.h \
Rep.c \
Rep.h \
Scene.c \
Scene.h \
ScrollBar.c \
ScrollBar.h \
Seq.c \
Seq.h \
Setting.c \
Setting.h \
Shaker.c \
Shaker.h \
Symmetry.c \
Symmetry.h \
Text.c \
Text.h \
TypeFace.c \
TypeFace.h \
View.c \
View.h \
Wizard.c \
Wizard.h 
