
INCLUDES = -I../ov/src -I../layer0 -I../layer1 -I../layer3 \
   -I../layer4 -I../layer5 -I../contrib/uiuc/plugins/include

noinst_LTLIBRARIES = liblayer2.la

liblayer2_la_SOURCES = AtomInfo.c \
AtomInfo.h \
CoordSet.c \
CoordSet.h \
DistSet.c \
DistSet.h \
GadgetSet.c \
GadgetSet.h \
ObjectAlignment.c \
ObjectAlignment.h \
ObjectCallback.c \
ObjectCallback.h \
ObjectCGO.c \
ObjectCGO.h \
ObjectDist.c \
ObjectDist.h \
ObjectGadget.c \
ObjectGadget.h \
ObjectGadgetRamp.c \
ObjectGadgetRamp.h \
ObjectGroup.c \
ObjectGroup.h \
ObjectMap.c \
ObjectMap.h \
ObjectMesh.c \
ObjectMesh.h \
ObjectMolecule2.c \
ObjectMolecule.c \
ObjectMolecule.h \
ObjectSlice.c \
ObjectSlice.h \
ObjectSurface.c \
ObjectSurface.h \
RepAngle.c \
RepAngle.h \
RepCartoon.c \
RepCartoon.h \
RepCylBond.c \
RepCylBond.h \
RepDihedral.c \
RepDihedral.h \
RepDistDash.c \
RepDistDash.h \
RepDistLabel.c \
RepDistLabel.h \
RepDot.c \
RepDot.h \
RepLabel.c \
RepLabel.h \
RepEllipsoid.c \
RepEllipsoid.h \
RepMesh.c \
RepMesh.h \
RepNonbonded.c \
RepNonbonded.h \
RepNonbondedSphere.c \
RepNonbondedSphere.h \
RepRibbon.c \
RepRibbon.h \
RepSphere.c \
RepSphere.h \
RepSurface.c \
RepSurface.h \
RepWireBond.c \
RepWireBond.h \
Sculpt.c \
SculptCache.c \
SculptCache.h \
Sculpt.h \
VFont.c \
VFont.h 
