src_files += files(
    'AssemblyHelpers.cpp',
    'AtomInfo.cpp',
    'AtomInfoHistory.cpp',
    'BondTypeHistory.cpp',
    'CifFile.cpp',
    'CifMoleculeReader.cpp',
    'CoordSet.cpp',
    'DistSet.cpp',
    'GadgetSet.cpp',
    'HydrogenAdder.cpp',
    'MmodTyping.cpp',
    'MmtfMoleculeReader.cpp',
    'Mol2Typing.cpp',
    'MolV3000.cpp',
    'ObjectAlignment.cpp',
    'ObjectCallback.cpp',
    'ObjectCGO.cpp',
    'ObjectCurve.cpp',
    'ObjectDist.cpp',
    'ObjectGadget.cpp',
    'ObjectGadgetRamp.cpp',
    'ObjectGroup.cpp',
    'ObjectMap.cpp',
    'ObjectMesh.cpp',
    'ObjectMolecule.cpp',
    'ObjectMolecule2.cpp',
    'ObjectMolecule3.cpp',
    'ObjectSlice.cpp',
    'ObjectSurface.cpp',
    'ObjectVolume.cpp',
    'RepAngle.cpp',
    'RepCartoon.cpp',
    'RepCylBond.cpp',
    'RepDihedral.cpp',
    'RepDistDash.cpp',
    'RepDistLabel.cpp',
    'RepDot.cpp',
    'RepEllipsoid.cpp',
    'RepLabel.cpp',
    'RepMesh.cpp',
    'RepNonbonded.cpp',
    'RepNonbondedSphere.cpp',
    'RepRibbon.cpp',
    'RepSphere.cpp',
    'RepSphereGenerate.cpp',
    'RepSphereImmediate.cpp',
    'RepSurface.cpp',
    'RepWireBond.cpp',
    'Sculpt.cpp',
    'SculptCache.cpp',
    'SideChainHelper.cpp',
    'VFont.cpp',
)

include_dirs += include_directories('.')
