
INCLUDES = -I../ov/src -I../layer0 -I../layer1 -I../layer2 \
   -I../layer4 -I../layer5 -I../contrib/uiuc/plugins/include

noinst_LTLIBRARIES = liblayer3.la

liblayer3_la_SOURCES = Editor.c \
Editor.h \
Executive.c \
Executive.h \
PlugIOManager.c \
PlugIOManager.h \
Seeker.c \
Seeker.h \
Selector.c \
Selector.h 
