src_files += files(
    'AtomIterators.cpp',
    'CifDataValueFormatter.cpp',
    'Editor.cpp',
    'Executive.cpp',
    'ExecutivePython.cpp',
    'Interactions.cpp',
    'MaeExportHelpers.cpp',
    'MoleculeExporter.cpp',
    'MovieScene.cpp',
    'PlugIOManager.cpp',
    'RingFinder.cpp',
    'Seeker.cpp',
    'Selector.cpp',
    'SelectorTmp.cpp',
    'SpecRec.cpp',
    'SpecRecSpecial.cpp',
)

include_dirs += include_directories('.')
