
noinst_LTLIBRARIES = libchamp0.la

libchamp0_la_SOURCES = champ.c \
champ.h \
champ_module.c \
chiral.c \
chiral.h \
const.h \
err2.c \
err2.h \
feedback2.c \
feedback2.h \
list.c \
list.h \
mac.h \
os_memory.c \
os_memory.h \
os_python.h \
os_std.h \
sort.c \
sort.h \
strblock.c \
strblock.h \
vla.c \
vla.h 
