python_sources = [
      '__init__.py',
      'arc.py',
      'bond_amber.py',
      'bond_mmff.py',
      'bonds.py',
      'brick.py',
      'cc1.py',
      'charge.py',
      'cif.py',
      'cpv.py',
      'dictdb.py',
      'gamess1.py',
      'gms.py',
      'hetatm.py',
      'io.py',
      'lst.py',
      'mae.py',
      'map.py',
      'mass.py',
      'mmd.py',
      'models.py',
      'mol.py',
      'mol2.py',
      'neighbor.py',
      'pdb.py',
      'pkl.py',
      'place.py',
      'protein.py',
      'protein_amber.py',
      'protein_amber99.py',
      'protein_mmff.py',
      'protein_residues.py',
      'sdf.py',
      'solvate.py',
      'water_amber.py',
      'water_residues.py',
      'xyz.py',
]

py.install_sources(
  python_sources,
  subdir: 'chempy'
)

subdir('bmin')
subdir('champ')
subdir('fast')
subdir('fragments')
subdir('mmtf')
subdir('tinker')

