python_sources = [
    '__init__.py',
    'advanced_settings_gui.py',
    'builder.py',
    'file_dialogs.py',
    'keymapping.py',
    'mimic_pmg_tk.py',
    'mimic_tk.py',
    'properties_dialog.py',
    'pymol_gl_widget.py',
    'pymol_qt_gui.py',
    'scene_bin_gui.py',
    'shortcut_menu_gui.py',
    'TextEditor.py',
    'volume.py',
]

py.install_sources(
  python_sources,
  subdir: 'pmg_qt'
)

subdir('forms')
subdir('syntax')

