python_sources = [
    '__init__.py',
    '_gui.py',
    'api.py',
    'callback.py',
    'cgo.py',
    'cgobuilder.py',
    'checking.py',
    'cmd.py',
    'colorprinting.py',
    'colorramping.py',
    'commanding.py',
    'completing.py',
    'computing.py',
    'constants.py',
    'constants_palette.py',
    'controlling.py',
    'creating.py',
    'diagnosing.py',
    'editing.py',
    'editor.py',
    'experimenting.py',
    'exporting.py',
    'externing.py',
    'feedingback.py',
    'fitting.py',
    'gui.py',
    'headering.py',
    'helping.py',
    'importing.py',
    'internal.py',
    'invocation.py',
    'keyboard.py',
    'keywords.py',
    'lazyio.py',
    'locking.py',
    'menu.py',
    'monitoring.py',
    'morphing.py',
    'movie.py',
    'moving.py',
    'mpeg_encode.py',
    'parser.py',
    'parsing.py',
    'povray.py',
    'preset.py',
    'pymolhttpd.py',
    'querying.py',
    'rpc.py',
    'save_shortcut.py',
    'selecting.py',
    'selector.py',
    'seqalign.py',
    'setting.py',
    'shortcut.py',
    'shortcut_dict.py',
    'shortcut_manager.py',
    'util.py',
    'vfont.py',
    'viewing.py',
    'wizarding.py',
    'xray.py',
    'xwin.py',
]

py.install_sources(
  python_sources,
  subdir: 'pymol'
)


subdir('plugins')
subdir('Qt')
subdir('stereochemistry')
subdir('wizard')

