
noinst_LTLIBRARIES = libov.la

libov_la_SOURCES = OVContext.c \
OVContext.h \
OVHeapArray.c \
OVHeapArray.h \
OVHeap.c \
OVHeap.h \
OVLexicon.c \
OVLexicon.h \
OVOneToAny.c \
OVOneToAny.h \
OVOneToOne.c \
OVOneToOne.h \
ov_port.h \
OVRandom.c \
OVRandom.h \
OVreturns.h \
ov_types.h \
ov_utility.c \
ov_utility.h 