python_sources = [
    '__init__.py',
    'askpartial.ui',
    'change_confirm.ui',
    'colors.ui',
    'create_shortcut.ui',
    'fetch.ui',
    'help_shortcut.ui',
    'load_aln.ui',
    'load_mae.ui',
    'load_map.ui',
    'load_mtz.ui',
    'load_traj.ui',
    'movieexport.ui',
    'pluginitem.ui',
    'pluginmanager.ui',
    'png.ui',
    'props.ui',
    'render.ui',
    'save_molecule.ui',
    'save_object.ui',
    'shortcut_menu.ui',
]

py.install_sources(
  python_sources,
  subdir: 'pmg_qt/forms'
)

