
python_sources = [
        '__init__.py',
        'annotation.py',
        'appearance.py',
        'benchmark.py',
        'box.py',
        'charge.py',
        'cleanup.py',
        'command.py',
        'demo.py',
        'density.py',
        'distance.py',
        'dragging.py',
        'filter.py',
        'label.py',
        'measurement.py',
        'message.py',
        'mutagenesis.py',
        'nucmutagenesis.py',
        'openvr.py',
        'pair_fit.py',
        'pseudoatom.py',
        'renaming.py',
        'sculpting.py',
        'security.py',
        'stereodemo.py',
        'toggle.py',
]

py.install_sources(
  python_sources,
  subdir: 'pymol/wizard'
)

