INCLUDES = -DPythonTypes  -DHAVE_ARRAYOBJECT_H

noinst_LTLIBRARIES = \
    libopenglutil0.la \
    libopenglutil_num0.la \
    lib_openglmodule0.la \
    lib_opengl_nummodule0.la \
    lib_glutmodule0.la \
    lib_glumodule0.la \
    lib_glu_nummodule0.la 
libopenglutil0_la_SOURCES = openglutil.c
libopenglutil_num0_la_SOURCES = openglutil_num.c
lib_openglmodule0_la_SOURCES = _openglmodule.c
lib_opengl_nummodule0_la_SOURCES = _opengl_nummodule.c
lib_glutmodule0_la_SOURCES = _glutmodule.c
lib_glumodule0_la_SOURCES = _glumodule.c
lib_glu_nummodule0_la_SOURCES = _glu_nummodule.c

