
INCLUDES = -DPythonTypes -I../modules

noinst_LTLIBRARIES = libsglite0.la

libsglite0_la_SOURCES = sgcb.c \
sgcharmx.c \
sgconst.h \
sgfile.c \
sggen.c \
sgglobal.c \
sghall.c \
sghkl.c \
sglite.h \
sglitemodule.c \
sgltr.c \
sgmath.c \
sgmetric.c \
sgnorm.c \
sgprop.c \
sgrefset.h \
sgss.c \
sgstr.c \
sgsymbols.c \
sgtidy.c \
sgtype.c \
sgutil.c \
runtests.c 