
INCLUDES = -I../../include

noinst_LTLIBRARIES = libmolfile_plugin0.la

libmolfile_plugin0_la_SOURCES = avsplugin.cpp bgfplugin.cpp				\
binposplugin.c biomoccaplugin.cpp brixplugin.cpp carplugin.c			\
ccp4plugin.cpp corplugin.cpp cpmdplugin.c crdplugin.c cubeplugin.cpp	\
dcdplugin.c dlpolyplugin.c dsn6plugin.cpp dxplugin.cpp edmplugin.cpp	\
fs4plugin.cpp gamessplugin.c graspplugin.cpp grdplugin.cpp				\
gridplugin.cpp gromacsplugin.cpp mapplugin.cpp mdfplugin.cpp			\
mol2plugin.cpp moldenplugin.c msmsplugin.cpp namdbinplugin.c			\
parm7plugin.cpp parmplugin.cpp pdbplugin.c phiplugin.cpp pltplugin.cpp	\
pqrplugin.c psfplugin.c raster3dplugin.cpp rst7plugin.c					\
situsplugin.cpp spiderplugin.cpp stlplugin.cpp tinkerplugin.c			\
uhbdplugin.cpp xbgfplugin.cpp xsfplugin.cpp xyzplugin.c					\
PlugIOManagerInit.c
