
INCLUDES = -I../../include

noinst_LTLIBRARIES = libmolfile_plugin0.la

libmolfile_plugin0_la_SOURCES = \
avsplugin.cpp \
basissetplugin.c \
bgfplugin.cpp \
binposplugin.c \
biomoccaplugin.cpp \
brixplugin.cpp \
carplugin.c \
ccp4plugin.cpp \
corplugin.c \
cpmdlogplugin.c \
cpmdplugin.c \
crdplugin.c \
cubeplugin.cpp \
dcdplugin.c \
dlpolyplugin.c \
dsn6plugin.cpp \
dtrplugin.cpp \
dxplugin.cpp \
edmplugin.cpp \
fs4plugin.cpp \
gamessplugin.c \
gaussianplugin.c \
graspplugin.cpp \
grdplugin.cpp \
gridplugin.cpp \
gromacsplugin.cpp \
hash.c \
jsplugin.c \
maeffplugin.cpp \
mapplugin.cpp \
mdfplugin.cpp \
mmcif.cpp \
mol2plugin.cpp \
moldenplugin.c \
mrcplugin.cpp \
msmsplugin.cpp \
namdbinplugin.c \
parm7plugin.cpp \
parmplugin.cpp \
pbeqplugin.cpp \
pdbplugin.c \
phiplugin.cpp \
pltplugin.cpp \
PlugIOManagerInit.c \
pqrplugin.c \
psfplugin.c \
raster3dplugin.cpp \
rst7plugin.c \
situsplugin.cpp \
spiderplugin.cpp \
stlplugin.cpp \
tinkerplugin.c \
uhbdplugin.cpp \
vaspchgcarplugin.c \
vaspoutcarplugin.c \
vaspposcarplugin.c \
vaspxdatcarplugin.c \
vaspxmlplugin.c \
vtfplugin.c \
xbgfplugin.cpp \
xsfplugin.cpp \
xyzplugin.c 

